# mdc-llm-deploy

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.cursor/plans/: 多阶段垂直构建_41a4e754.plan.md
.cursor/rules/: mailbox-rule.mdc
configs/: gptq-linear-w4a8.json  minmax-attention-a8.json  minmax-linear-w8a8.json
configs/quantization/: gptq-moe-w8a8.json  minmax-moe-w8a8.json
docs/: PRD.md  mdc_onnx.md  onnx.md  quantization.md
docs/designs/: activation-quantization.md  config.md
docs/operators/: ApplyRotaryPosEmb.md  AscendDequant.md  AscendQuantV2.md  FusedInferAttentionScore.md  MoeExpert.md  RmsNorm.md
docs/ops/: ApplyRotaryPosEmb.md  AscendQuantV2.md  FusedInferAttentionScore.md  MoeExpert.md
docs/validation/: b-side.md
examples/: README.md  qwen3_4b_fp16_tp_export.py  qwen3_8b_fp16_export.py  qwen3_8b_w8a8_export.py
examples/qwen3_8b_layer_accuracy/: __init__.py  __main__.py  artifacts.py  metrics.py  modeling.py
mdc_llm_deploy/: __init__.py  _observability.py  _onnx_schema_registry.py  capabilities.py  errors.py  fx_inspection.py  graph.py  graph_contract.py  graph_types.py  graph_validation.py  immutable_json.py  input_placement.py  model_properties.py  moe_layout.py  operator_schema.py  placement.py
mdc_llm_deploy/config/: __init__.py  config.py  modifiers.py  schema.json  schema.py  specs.py
mdc_llm_deploy/core/: __init__.py  observability.py
mdc_llm_deploy/custom_ops/: __init__.py  apply_rotary_pos_emb.py  base.py  fused_infer_attention_score.py  moe_expert.py  registry.py  rms_norm.py
mdc_llm_deploy/export/: __init__.py  api.py  decode.py  decode_cache.py  decode_metadata.py  decode_rewrite.py  discovery.py
mdc_llm_deploy/graph/: __init__.py  contract.py  lifecycle.py  validation.py
mdc_llm_deploy/mdc_onnx/: __init__.py  pipeline.py  quant_lowering.py  schemas.py
mdc_llm_deploy/mdc_ops/: __init__.py  attention.py  moe.py  normalization.py  operators.py  quantized_io.py  registry.py  schema.py  symbolics.py
mdc_llm_deploy/models/: __init__.py  attention.py  auto.py  configuration.py  export_config.py  feedforward.py  layers.py  loading.py  qwen3.py  tiny.py  types.py
mdc_llm_deploy/observability/: __init__.py  config.py  logging.py  rendering.py  stage.py
mdc_llm_deploy/onnx/: __init__.py  _graph.py  api.py  compatibility_lowering.py  normalization.py  pipeline.py  quant_lowering.py
mdc_llm_deploy/onnx_export/: api.py  artifact_io.py  attention_lowering.py  attention_validation.py  compatibility.py  graph_cleanup.py  io_validation.py  linear_lowering.py  lowering_support.py  metadata_validation.py  model_inspection.py  moe_lowering.py  moe_validation.py  validator.py  (+3 more)
tests/: README.md  conftest.py  model_fixtures.py  test_capabilities.py  test_config_stage1.py  test_contract_docs.py  test_distribution.py  test_export.py  test_models_stage1.py  test_onnx_export.py  test_onnx_matrix.py  test_quantization.py  test_release_matrix_runner.py
tools/: generate_lock.py  release_matrix.py
(+317 files in other folders)
