[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "mdc-llm-deploy"
version = "0.1.0"
description = "Transformers-compatible LLM compression and MDC ONNX export library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [{ name = "MDC LLM Deploy contributors" }]
dependencies = [
  "accelerate>=1.2",
  "datasets>=3.2",
  "evaluate>=0.4",
  "huggingface_hub>=0.34",
  "numpy>=2.0",
  "onnx>=1.17",
  "onnxscript>=0.2",
  "safetensors>=0.5",
  "torch>=2.8",
  "transformers>=4.57.0",
  "triton>=3.2; platform_system == 'Linux'",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-cov>=6",
  "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["mdc_llm_deploy"]

[tool.hatch.build]
include = [
  "mdc_llm_deploy/**/*.py",
  "mdc_llm_deploy/**/*.json",
  "mdc_llm_deploy/py.typed",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: exercises multiple library layers or serialized artifacts",
  "slow: takes materially longer than focused unit tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["mdc_llm_deploy"]
warn_unreachable = true

[tool.coverage.run]
source = ["mdc_llm_deploy"]
branch = true
